# trust-pdf

./: .gitattributes  .gitignore  LICENSE  LICENSE_APACHE  LICENSE_MIT  README.md  sonar-project.properties  trust-pdf.code-workspace
rust/: Cargo.toml  README.md  debug_test.rs  rust-toolchain.toml  rustfmt.toml
rust/crates/code-analysis/: Cargo.toml
rust/crates/code-analysis/src/: arc.rs  green.rs  lexer.rs  lib.rs  parser.rs  syntax.rs  syntax_kind.rs
rust/crates/code-analysis/src/green/: diagnostic.rs  diagnostics.rs  factory.rs  flags.rs  macros.rs  node.rs  node_element.rs  node_type.rs  nodes.rs  token.rs  token_element.rs  token_missing.rs  token_no_trivia.rs  token_type.rs  token_with_trailing_trivia.rs  token_with_trivia.rs  token_with_value.rs  token_with_value_and_trailing_trivia.rs  token_with_value_and_trivia.rs  tree.rs  trivia.rs
rust/crates/code-analysis/src/lexer/: cursor.rs  lexer.rs  tests.rs
rust/crates/code-analysis/src/parser/: cursor.rs
rust/crates/code-analysis/src/syntax/: green.rs  red.rs
rust/crates/code_analysis/: Cargo.toml
rust/crates/code_analysis/src/: green.rs  lib.rs  syntax_kind.rs
rust/crates/code_analysis/src/green/: flags.rs  flags_and_slot_count.rs  green_node.rs  token.rs  trait.rs  trivia.rs
rust/crates/factory/: Cargo.toml
rust/crates/factory/src/: lib.rs  syntax_factory.rs
rust/crates/lexer/: Cargo.toml  README.md  wasm.html
rust/crates/lexer/src/: cursor.rs  lexer.rs  lib.rs  test_support.rs  tests.rs  wasm.rs
rust/crates/lexer/src/tests/: bracket_tokens.rs  generic.rs  hex_string_token.rs  keyword_token.rs  lexer_generic.rs  lexer_numeric_literal_token.rs  lexer_safedocs_whitespace_rules.rs  lexer_stream_token.rs  lexer_trivia.rs  literal_string_token.rs  name_literal_token.rs  safedocs_whitespace_rules.rs  stream_token.rs  structure_keywords.rs  utils.rs
rust/crates/lexer/tests/: lexer_bracket_tokens.rs  lexer_generic.rs  lexer_hex_string_token.rs  lexer_keyword_token.rs  lexer_literal_string_token.rs  lexer_name_literal_token.rs  lexer_numeric_literal_token.rs  lexer_safedocs_whitespace_rules.rs  lexer_stream_token.rs  lexer_structure_keywords.rs  lexer_test_support.rs  lexer_trivia.rs  wasm_tests.rs
rust/crates/lexer/tests/support/: mod.rs
rust/crates/lsp/: Cargo.toml  package.json
rust/crates/lsp-server/: Cargo.toml  package.json
rust/crates/lsp-server/src/: capabilities.rs  line_map.rs  lsp.rs  main.rs  tokens.rs  version.rs
rust/crates/lsp-server/src/handlers/: notifications.rs  requests.rs
rust/crates/lsp-server/src/lsp/: semantic_tokens.rs
rust/crates/lsp/src/: handlers.rs  main_loop.rs  tokens.rs
rust/crates/lsp/src/lsp/: capabilities.rs
rust/crates/parser/: Cargo.toml
rust/crates/parser/src/: cursor.rs  lib.rs  parser.rs  syntax_factory.rs
rust/crates/rowan/: Cargo.toml
rust/crates/rowan/src/: diagnostics.rs  green.rs  lib.rs  red.rs  utility_types.rs
rust/crates/rowan/src/green/: arena.rs  builder.rs  cache.rs  element.rs  macros.rs  node.rs  token.rs  trivia.rs
rust/crates/rowan/src/red/: node.rs  token.rs  trivia.rs  trivia_list.rs
rust/crates/semantic/: Cargo.toml
rust/crates/semantic/src/: hir.rs
rust/crates/syntax/: Cargo.toml
rust/crates/syntax/benches/: green_trivia.rs
rust/crates/syntax/src/: api.rs  arc.rs  ast.rs  builder.rs  cursor.rs  diagnostic_kind.rs  diagnostics.rs  error.rs  green.rs  green2.rs  green_nodes.rs  kind.rs  lib.rs  macros.rs  node_text.rs  nodes.rs  red.rs  sll.rs  syntax.rs  syntax_factory.rs  syntax_kind.rs  syntax_text.rs  utilities.rs  utility_types.rs  utility_types_tests.rs  utils.rs
rust/crates/syntax/src/api/: element.rs  element_children.rs  language.rs  node.rs  node_children.rs  node_text.rs  preorder.rs  preorder_with_tokens.rs  token.rs  trivia.rs
rust/crates/syntax/src/arc/: arc.rs  arc_inner.rs  arc_inner_tests.rs  arc_main.rs  arc_main_tests.rs  arc_tests.rs  header_slice.rs  header_slice_tests.rs  tests.rs  thin_arc.rs  thin_arc_tests.rs
rust/crates/syntax/src/ast/: ast_node.rs
rust/crates/syntax/src/builder/: checkpoint.rs
rust/crates/syntax/src/cursor/: element.rs  element_children.rs  green.rs  green_element.rs  node.rs  node_children.rs  node_data.rs  node_kind.rs  preorder.rs  preorder_with_tokens.rs  syntax_element.rs  syntax_element_children.rs  syntax_node_children.rs  syntax_node_data.rs  syntax_node_kind.rs  syntax_token.rs  syntax_trivia.rs  syntax_trivia_pieces_iterator.rs  token.rs  trivia.rs  trivia_pieces_iterator.rs  weak_green_element.rs
rust/crates/syntax/src/green/: arena.rs  builder.rs  builder_v2.rs  cache.rs  child.rs  diagnostic.rs  diagnostics.rs  element.rs  element_ref.rs  element_ref_tests.rs  element_tests.rs  elements.rs  flags.rs  green_node.rs  item_or_list.rs  kind.rs  list.rs  list_with_two_children.rs  macros.rs  node.rs  node2.rs  node_cache.rs  node_child.rs  node_child_tests.rs  node_children.rs  node_data.rs  node_head.rs  node_or_token.rs  node_slot.rs  node_slots.rs  node_trait.rs  tests.rs  text.rs  token.rs  token2.rs  token_data.rs  token_head.rs  token_no_trivia.rs  token_tests.rs  trait.rs  (+12 more)
rust/crates/syntax/src/green2/: cache.rs  list_with_two_children.rs  trivia.rs
rust/crates/syntax/src/green_nodes/: collections.rs  document.rs  factory.rs  green_syntax_factory.rs  nodes.rs  objects.rs  primitives.rs  stream.rs  trailer.rs  version.rs  xref.rs
rust/crates/syntax/src/internal/: nodes.rs
rust/crates/syntax/src/nodes/: pdf_document.rs
rust/crates/syntax/src/red/: element.rs  node.rs  node_data.rs  preorder.rs  token.rs  trivia.rs
rust/crates/syntax/src/syntax/: kind.rs  language.rs  syntax_kind.rs  syntax_token.rs  syntax_token_text.rs  syntax_trivia.rs  syntax_trivia_piece.rs  syntax_trivia_piece_comment.rs  syntax_trivia_piece_newline.rs  (+7 more)
rust/crates/syntax/tests/: tree.rs
rust/crates/syntax_2/: Cargo.toml
rust/crates/syntax_2/src/: green.rs  kind.rs  lib.rs
rust/crates/wasm-lexer/: Cargo.toml  README.md  wasm.html
rust/crates/wasm-lexer/src/: lib.rs
rust/crates/wasm-lexer/tests/: wasm_tests.rs
rust/pdf-analyzer/: Cargo.toml
(+151 files in other folders)
