[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.91.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Victor Pogor", "TRust PDF contributors"]
repository = "https://github.com/pogor-dev/trust-pdf"

[workspace.dependencies]
# Local crates
parser = { path = "./crates/parser", version = "0.1.0" }
syntax = { path = "./crates/syntax", version = "0.1.0" }
lexer = { path = "./crates/lexer", version = "0.1.0" }
semantic = { path = "./crates/semantic", version = "0.1.0" }

# Non-local crates
bumpalo = "3.19.0"
cargo-deny = "0.18.3"
countme = "3.0.1"
hashbrown = "0.16.0"
la-arena = "0.3.1"
iai-callgrind = "0.16.1"
iai-callgrind-macros = "0.6.1"
rstest = "0.26.1"
rustc-hash = "2.1.1"
triomphe = "0.1.15"

# Optimized profiles for faster builds
[profile.dev]
# Faster debug builds
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.test]
# Optimized test builds
debug = 1
incremental = true
codegen-units = 256

[profile.bench]
debug = true
strip = false
incremental = true
