[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.92.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Victor Pogor", "TRust PDF contributors"]
repository = "https://github.com/pogor-dev/trust-pdf"

[workspace.dependencies]
# Local crates
parser = { path = "./crates/parser", version = "0.1.0" }
lexer = { path = "./crates/lexer", version = "0.1.0" }
rowan = { path = "./crates/rowan", version = "0.1.0" }
semantic = { path = "./crates/semantic", version = "0.1.0" }
syntax = { path = "./crates/syntax", version = "0.1.0" }
wasm-lexer = { path = "./crates/wasm-lexer", version = "0.1.0" }

# Non-local crates
bumpalo = "3.19.1"
cargo-deny = "0.18.3"
cargo-llvm-cov = "0.6.14"
countme = "3.0.1"
hashbrown = "0.16.1"
la-arena = "0.3.1"
iai-callgrind = "0.16.1"
iai-callgrind-macros = "0.6.1"
pretty_assertions = "1.4.1"
rustc-hash = "2.1.1"
triomphe = "0.1.15"
wasm-bindgen = "0.2.106"
wasm-bindgen-test = "0.3.56"

# Optimized profiles for faster builds
[profile.dev]
debug = 2
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = 2
incremental = true
codegen-units = 256

[profile.bench]
debug = true
strip = false
incremental = true
