[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.92.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Victor Pogor", "TRust PDF contributors"]
repository = "https://github.com/pogor-dev/trust-pdf"

[workspace.dependencies]
# Local crates
parser = { path = "./crates/parser", version = "0.1.0" }
lexer = { path = "./crates/lexer", version = "0.1.0" }
semantic = { path = "./crates/semantic", version = "0.1.0" }
syntax_2 = { path = "./crates/syntax_2", version = "0.1.0" }
trust-pdf-analyzer = { path = "./crates/lsp", version = "0.1.0" }
wasm-lexer = { path = "./crates/wasm-lexer", version = "0.1.0" }

# Non-local crates
anyhow = "1.0.100"
bumpalo = "3.19.1"
cargo-deny = "0.19.0"
cargo-llvm-cov = "0.6.14"
countme = "3.0.1"
hashbrown = "0.16.1"
la-arena = "0.3.1"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
iai-callgrind = "0.16.1"
iai-callgrind-macros = "0.6.1"
pretty_assertions = "1.4.1"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
triomphe = "0.1.15"
wasm-bindgen = "0.2.108"
wasm-bindgen-test = "0.3.58"

# Optimized profiles for faster builds
[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.test]
debug = 1
incremental = true
codegen-units = 256

[profile.bench]
debug = true
strip = false
incremental = true
