[package]
name = "lexer"
version = "0.1.0"
description = "PDF lexer implementing ISO 32000-2:2020"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
# Local crates
syntax_2 = { path = "../syntax_2" }

[dev-dependencies]
pretty_assertions.workspace = true
