[package]
name = "rowan"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# Avoid loading benches from the benches directory so we can add more
# dependencies in there which would otherwise hog down testing this crate.
autobenches = false

[dependencies]
# Local crates

# Non-local crates
bumpalo.workspace = true
countme.workspace = true
hashbrown.workspace = true
rustc-hash.workspace = true
triomphe.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
