[package]
name = "syntax"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

# Avoid loading benches from the benches directory so we can add more
# dependencies in there which would otherwise hog down testing this crate.
autobenches = false

[dependencies]
# Local crates

# Non-local crates
iai-callgrind = { workspace = true, optional = true }
iai-callgrind-macros = { workspace = true, optional = true }

[dev-dependencies]
# Unit test dependencies go here (lightweight only)

[features]
# Feature flag for benchmark dependencies
bench = ["dep:iai-callgrind", "dep:iai-callgrind-macros"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
