[package]
name = "syntax_2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# Local crates

# Non-local crates
countme.workspace = true
hashbrown.workspace = true
pretty_assertions.workspace = true
rustc-hash.workspace = true
