[package]
name = "wasm-lexer"
version = "0.1.0"
description = "WebAssembly bindings for the trust-pdf lexer"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Local crates
lexer.workspace = true
syntax_2.workspace = true

# Non-local crates
pretty_assertions.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
